Revise for guides

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
           <div class="col-lg-8 content">
             <h2>Assistant Professor & Sociolinguist</h2>
-            <p>(by ChatGPT, TBD) 我對<b>社會語言學</b>領域感興趣，特別是其中的<b>語言使用與轉變</b>、<b>語言維持與流失</b>、<b>語言態度與身份認同</b>、<b>語言復興</b>、<b>語言政策與規劃</b>等子領域。我認為<b>語言不僅是溝通的工具，更是反映不同文化、社會與歷史背景的媒介</b>。每種語言都有其獨特性，應該被保存並傳承下去。</p>
+            <p>我對<b>社會語言學</b>領域感興趣，特別是其中的<b>語言使用與轉變</b>、<b>語言維持與流失</b>、<b>語言態度與身份認同</b>、<b>語言復興</b>、<b>語言政策與規劃</b>等子領域。我認為<b>語言不僅是溝通的工具，更是反映不同文化、社會與歷史背景的媒介</b>。每種語言都有其獨特性，應該被保存並傳承下去。</p>
             <p>I am interested in the field of sociolinguistics, especially in the subfield, such as language use and shift, language maintenance and loss, language attitude and identity, language revitalization, language policy and planning, etc. I think that language is not only a tool for communication, but also a medium to reflect different cultures, societies and historical backgrounds. Every language has its own uniqueness and should be preserved and passed down.</p>
             <div class="row">
               <div class="col-lg-6">
@@ -231,7 +231,7 @@
             <h3 class="resume-title"><i class="bi bi-award"></i> Academic Awards</h3>
             <div class="resume-item pb-0">
               <h4>國立勤益科技大學推動研究發展績效獎</h4>
-              <p><em>[English]</em></p>
+              <p><em>Promoting Research and Development Performance Award, NCUT.</em></p>
               <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 核心證照獎 (2023)</li></ul>
               <h4>國科會獎勵博士候選人撰寫博士論文獎</h4>
               <p><em>Doctoral Dissertation Fellowships for the Humanities and Social Sciences</em></p>
@@ -243,11 +243,11 @@
               <p><em>Scholarship of the Linguistic Graduate Students, The Language Training & Testing Center</em></p>
               <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 財團法人語言訓練測驗中心 LTTC (2011)</li></ul>
               <h4>年度最佳論文獎</h4>
-              <p><em>[English]</em></p>
+              <p><em>Award of Annual MA thesis</em></p>
               <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> Award of Annual MA thesis, Providence University (2008)</li></ul>
               <h4>國際榮譽大使</h4>
-              <p><em>[English]</em></p>
-              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> International Honor Ambassador, Office of International Affairs, Providence University (2008)</li></ul>
+              <p><em>International Honor Ambassador</em></p>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> Office of International Affairs, Providence University (2008)</li></ul>
             </div>
 
             <h3 class="resume-title"><i class="bi bi-credit-card-2-front"></i> Licenses & Certificates</h3>
@@ -334,19 +334,19 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
-            <div>
-              <h4 class="title"><a href="teaching-details.html" class="stretched-link">教學經歷</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
             <div>
               <h4 class="title"><a href="work-details.html" class="stretched-link">工作經歷</a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
+            <div>
+              <h4 class="title"><a href="#" class="stretched-link">XXXX</a></h4>
+              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
             </div>
           </div>
 
@@ -395,11 +395,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-guides">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/guide-01.png" class="img-fluid" alt="">
+                <img src="assets/img/guides/guide-cover.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>競賽指導</h4>
                   <p>《全國人文社會永續行動創新應用競賽》✨ 獲選優勝 ✨</p>
-                  <a href="assets/img/portfolio/guide-01.png" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/guides/guide-zoom.jpg" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝&佳作 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="guide-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
