--- a/work-details.html
+++ b/work-details.html
@@ -94,7 +94,7 @@
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3><i class="bi bi-arrow-repeat"></i> 工作經歷 Work Experiences</h3>
+            <h3><i class="bi bi-chat-left-dots"></i> 工作經歷 Work Experiences</h3>
             <hr>
 
             <h4>國立彰化師範大學科學教育研究所 | 博士後研究員</h4>
@@ -157,7 +157,31 @@
               <li><i class="bi bi-caret-right"></i> Grammar and Writing English</li>
               <li><i class="bi bi-caret-right"></i> Listening and Speaking in English</li>
             </ul>
+
+            <br>
+            <h3><i class="bi bi-chat-left-dots"></i> 教學經歷 Teaching Experiences</h3>
+            <hr>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2017 Fall, TA]</b> Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2016, Fall, TA]</b> Sociolinguistics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2015 Spring, TA]</b> Grammaticalization & Lexicalization, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, Lecturer]</b> English Proficiency Development, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, Lecturer]</b> Speech and Communication in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, Lecturer]</b> Grammar and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, TA]</b> Introduction to Linguistics, Interdisciplinary Program of Humanities and Social Sciences, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, Lecturer]</b> Listening and Speaking in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, TA]</b> Discourse Analysis, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Spring, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2010 Fall, TA]</b> Contrastive Analysis and Error Analysis, Graduate Institute of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2010 Spring, TA]</b> Syntax, Department of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2007-2008, TA]</b> English listening and speaking (Undergraduate), Providence University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2007-2008, TA]</b> Linguistics, Department of English Language, Literature and Linguistics, Providence University, Taiwan</span></li>
+            </ul>
         </div>
+
       </div>
 
     </section><!-- /Work Details Section -->
