--- a/guide-details.html
+++ b/guide-details.html
@@ -106,29 +106,22 @@
                   }
                 }
               </script>
-
-              <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide">
-                  <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F61550050917478%2Fvideos%2F554243197204450&show_text=true&appId=685790705411334" width="100%" height="2000" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
-                </div>
-              <!-- 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dog-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dog-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dog-3.jpg" alt="">
-                </div> -->
-              </div>
               <div class="swiper-pagination"></div>
+              <div class="swiper-wrapper">
+                <!-- <div class="swiper-slide">
+                  <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F61550050917478%2Fvideos%2F554243197204450&show_text=true&appId=685790705411334" width="100%" height="2000" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                </div> -->
+                <div class="swiper-slide"><img src="assets/img/guides/guide-01.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-02.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-03.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-04.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-05.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-06.jpg" alt=""></div>
+              </div>
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4"><br><br>
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>全國人文社會永續行動創新應用競賽</h3>
               <ul>
@@ -137,17 +130,19 @@
                 <li><strong>👨‍🏫 指導老師</strong>：<strong><a href="#">楊真宜</a></strong> 助理教授</li>
                 <li><strong>👥 團隊成員</strong>：許哲綸、鄭宇廷、齊又頡、黃鈞緯</li>
                 <li><strong>🏆 競賽結果</strong>：✨ <strong><a href="#">獲選優勝</a></strong> ✨</li>
-                <li><strong>🔗 影片網址</strong>：📹 <a href="https://www.facebook.com/61550050917478/videos/554243197204450" target="_blank">CLICK HERE</a> 📹</li>
+                <li><strong>🔗 影片網址</strong>：📹 <a href="https://www.facebook.com/61550050917478/videos/554243197204450" target="_blank">CLICK HERE</a> 📹</li><hr>
+                <li>📢 今天為大家介紹 112年度 <a href="#">#大專組優勝</a> 的另一支隊伍提案「鐵骨柔情-響遍太平」。來自 #勤益科大 的同學們以台中市太平區鐵工產業為核心，期望以嶄新的創意方案推廣當地的鐵工藝術與文化特色。</li>
+                <li><iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F61550050917478%2Fvideos%2F554243197204450&appId=685790705411334" width="100%" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>【112年度競賽回顧】</h2>
+              <!-- <h2>【112年度競賽回顧】</h2>
               <p>
                 📢 今天為大家介紹 112年度 <a href="#">#大專組優勝</a> 的另一支隊伍提案「鐵骨柔情-響遍太平」。來自 #勤益科大 的同學們以台中市太平區鐵工產業為核心，期望以嶄新的創意方案推廣當地的鐵工藝術與文化特色。
               </p>
               <p>
                 📌 提案簡介<br>「鐵骨柔情-響遍太平」團隊透過與鐵工藝術家的深度訪談，將豐富的在地資料結合所學，創建出具有視覺和聽覺效果的 GIS 三語故事地圖，不僅展現了當地的工藝特色，還讓更多人認識這些獨特的文化遺產。除此之外，團隊還建立一個為鐵工藝術家們而設計的專屬網站，讓廢鐵的再利用與商品化價值傳播到更遠的地方。
-              </p>
+              </p> -->
             </div>
           </div>
 
