Revise for work details

--- a/work-details.html
+++ b/work-details.html
@@ -151,34 +151,55 @@
             <h5>2011 - 2013</h5>
             <p><em>Lecturer, Department of English Instruction, National Hsinchu University of Education, Hsinchu, Taiwan.</em></p>
             <ul>
-              <li><i class="bi bi-caret-right"></i> Reading and Writing English</li>
+              <li><i class="bi bi-caret-right"></i> Reading and Writing in English</li>
               <li><i class="bi bi-caret-right"></i> English Proficiency Development</li>
               <li><i class="bi bi-caret-right"></i> Speech and Communication in English</li>
-              <li><i class="bi bi-caret-right"></i> Grammar and Writing English</li>
+              <li><i class="bi bi-caret-right"></i> Grammar and Writing in English</li>
               <li><i class="bi bi-caret-right"></i> Listening and Speaking in English</li>
             </ul>
 
             <br>
             <h3><i class="bi bi-chat-left-dots"></i> 教學經歷 Teaching Experiences</h3>
             <hr>
+            <h4>國立清華大學語言學研究所 | 教學助理</h4>
+            <h5>2010 - 2012, 2015 - 2017</h5>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2017 Fall, TA]</b> Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2016, Fall, TA]</b> Sociolinguistics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2015 Spring, TA]</b> Grammaticalization & Lexicalization, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, Lecturer]</b> English Proficiency Development, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, Lecturer]</b> Speech and Communication in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, Lecturer]</b> Grammar and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, TA]</b> Introduction to Linguistics, Interdisciplinary Program of Humanities and Social Sciences, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, Lecturer]</b> Listening and Speaking in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, TA]</b> Discourse Analysis, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Spring, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2010 Fall, TA]</b> Contrastive Analysis and Error Analysis, Graduate Institute of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2010 Spring, TA]</b> Syntax, Department of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2007-2008, TA]</b> English listening and speaking (Undergraduate), Providence University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2007-2008, TA]</b> Linguistics, Department of English Language, Literature and Linguistics, Providence University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> Pragmatics</li>
+              <li><i class="bi bi-caret-right"></i> Sociolinguistics</li>
+              <li><i class="bi bi-caret-right"></i> Grammaticalization & Lexicalization</li>
+              <li><i class="bi bi-caret-right"></i> Seminar in Pragmatics</li>
+              <li><i class="bi bi-caret-right"></i> Discourse Analysis</li>
+              <li><i class="bi bi-caret-right"></i> Seminar in Pragmatics</li>
+            </ul>
+
+            <h4>國立清華大學人文社會學院 | 教學助理</h4>
+            <h5>2012</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> Introduction to Linguistics</li>
+            </ul>
+
+            <h4>國立清華大學外國語言文學研究所 | 教學助理</h4>
+            <h5>2010</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> Contrastive Analysis and Error Analysis</li>
+            </ul>
+
+            <h4>國立清華大學外國語言文學系 | 教學助理</h4>
+            <h5>2010</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> Syntax</li>
+            </ul>
+
+            <h4>靜宜大學英國語文學系 | 教學助理</h4>
+            <h5>2007 - 2008</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> Linguistics</li>
+            </ul>
+
+            <h4>靜宜大學(大學部英文) | 教學助理</h4>
+            <h5>2007 - 2008</h5>
+            <ul>
+              <li><i class="bi bi-caret-right"></i> English listening and speaking (Undergraduate)</li>
             </ul>
         </div>
 
