Add new content for certificates

--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -120,6 +120,19 @@
                 <div class="swiper-slide">
                   <img src="assets/img/licenses/AIL-fundamental.png" alt="">
                 </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/patents/PAT-M657972.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/certificates/Secondary-School-Teacher.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/certificates/Southern-Min-Language-Proficiency.png" alt="">
+                </div>
+
               </div>
             </div>
           </div>
@@ -130,7 +143,9 @@
               <ul>
                 <li><i class="bi bi-bookmark-star"></i> TKT 劍橋英語教師認證</li>
                 <li><i class="bi bi-bookmark-star"></i> AIL 人工智慧專業級證照</li>
-                <li><i class="bi bi-bookmark-star"></i> AIL 人工智慧基礎級證照</li>
+                <li><i class="bi bi-bookmark-star"></i> 新型研發專利【外語口說評分系統】</li>
+                <li><i class="bi bi-bookmark-star"></i> 高級中等學校英文科教師證書</li>
+                <li><i class="bi bi-bookmark-star"></i> 閩南語語言能力認證考試合格證書</li>
               </ul>
             </div>
           </div>
