--- a/work-details.html
+++ b/work-details.html
@@ -101,7 +101,7 @@
             <h5>2022 - 2022</h5>
             <p><em>Postdoctoral Researcher, Graduate Institute of Science Education, National Changhua University of Education, Changhua, Taiwan.</em></p>
             <ul style="list-style-type: none;">
-              <li><i class="bi bi-briefcase"></i> (TBD)</li>
+              <li><i class="bi bi-briefcase"></i> 教育部國民及學前教育署「第2期中小學科學教育中程計畫規劃」</li>
               <li>
                 <ul style="list-style-type: none;">
                   <li><i class="bi bi-caret-right"></i> (TBD)</li>
@@ -196,7 +196,7 @@
               <li><i class="bi bi-caret-right"></i> Linguistics</li>
             </ul>
 
-            <h4>靜宜大學(大學部英文) | 教學助理</h4>
+            <h4>靜宜大學(大學部) | 教學助理</h4>
             <h5>2007 - 2008</h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> English listening and speaking (Undergraduate)</li>
