--- a/guide-details.html
+++ b/guide-details.html
@@ -117,6 +117,10 @@
                 <div class="swiper-slide"><img src="assets/img/guides/guide-04.jpg" alt=""></div>
                 <div class="swiper-slide"><img src="assets/img/guides/guide-05.jpg" alt=""></div>
                 <div class="swiper-slide"><img src="assets/img/guides/guide-06.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-award-01.png" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-award-02.png" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-award-03.png" alt=""></div>
+                <div class="swiper-slide"><img src="assets/img/guides/guide-award-04.png" alt=""></div>
               </div>
             </div>
           </div>
