--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
             <div>
-              <h4 class="title"><a href="#" class="stretched-link">XXXX</a></h4>
+              <h4 class="title"><a href="licenses-certificates.html" class="stretched-link">專利/證照/證書</a></h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
             </div>
           </div>
