--- a/paticipation-details.html
+++ b/paticipation-details.html
@@ -96,7 +96,7 @@
             <h3><i class="bi bi-people"></i> 學術參與 Acdamic Participation</h3>
             <hr>
             <h5>
-              委員擔任
+              委員擔任、研討會評論人、期刊審查委員、PU研究生論文研討會主持人、畢業論文審查委員
             </h5>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span></span></li>
