Add new content for graduations

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <li><i class="bi bi-bookmark-star"></i> 專利編號：新型第 M657972 號</li>
                 <li><i class="bi bi-bookmark-star"></i> 專利權期間：2024.07.11 - 2033.12.05</li>
               </ul>
-              <h4>中等學校英文科教師證書</h4>
+              <h4>高級中等學校英文科教師證書</h4>
               <ul style="list-style-type: none;">
                 <li><i class="bi bi-bookmark-star"></i> 教師證號：中字檢第 9800102 號</li>
               </ul>
@@ -375,11 +375,35 @@
             <li data-filter=".filter-product">Product</li>
             <li data-filter=".filter-branding">Branding</li>
             <li data-filter=".filter-books">Books</li>
-            <li data-filter=".filter-guides">競賽指導</li>
-            <li data-filter="">專題指導</li>
+            <li data-filter=".filter-guides-contest">競賽指導</li>
+            <li data-filter=".filter-guides-graduation">專題指導</li>
           </ul>
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-guides-contest">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/guides/guide-cover.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>競賽指導</h4>
+                  <p>《全國人文社會永續行動創新應用競賽》✨ 獲選優勝 ✨</p>
+                  <a href="assets/img/guides/guide-zoom.jpg" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝&佳作 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="guide-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-guides-graduation">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/guides/guide-cover-2.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>專題指導</h4>
+                  <p>畢業專題論文指導</p>
+                  <a href="assets/img/guides/guide-zoom-2.jpg" title="畢業專題論文指導" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="graduation-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
               <div class="portfolio-content h-100">
@@ -389,18 +413,6 @@
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/dog-1.jpg" title="Dog 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-guides">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/guides/guide-cover.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>競賽指導</h4>
-                  <p>《全國人文社會永續行動創新應用競賽》✨ 獲選優勝 ✨</p>
-                  <a href="assets/img/guides/guide-zoom.jpg" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝&佳作 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="guide-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -436,18 +448,6 @@
                   <h4>Dog 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/dog-2.jpg" title="Dog 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Product 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
