--- a/index.html
+++ b/index.html
@@ -371,12 +371,12 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-dog">Dog</li>
             <li data-filter=".filter-product">Product</li>
             <li data-filter=".filter-branding">Branding</li>
             <li data-filter=".filter-books">Books</li>
             <li data-filter=".filter-guides-contest">競賽指導</li>
             <li data-filter=".filter-guides-graduation">專題指導</li>
+            <li data-filter=".filter-dog">阿弟🐾</li>
           </ul>
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -397,9 +397,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/guides/guide-cover-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>專題指導</h4>
-                  <p>畢業專題論文指導</p>
-                  <a href="assets/img/guides/guide-zoom-2.jpg" title="畢業專題論文指導" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <h4>專題指導</h4>
+                    <p>《畢業專題論文指導》🎓📜</p>
+                  <a href="assets/img/guides/guide-zoom-2.jpg" title="畢業專題論文指導 🎓📜" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="graduation-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -409,9 +409,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Dog 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/dog-1.jpg" title="Dog 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <h4>阿弟</h4>
+                    <p>My Pet: 阿弟</p>
+                  <a href="assets/img/portfolio/dog-1.jpg" title="My Pet: 黑柴阿弟 🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -441,18 +441,6 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/dog-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Dog 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/dog-2.jpg" title="Dog 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
@@ -472,18 +460,6 @@
                   <h4>Books 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/dog-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Dog 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/dog-3.jpg" title="Dog 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
