Update text for achievements

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-book"></i></div>
             <div>
               <h4 class="title"><a href="publication-details.html" class="stretched-link">學術發表</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Karen 的學術發表與研究成果，涵蓋社會語言學與語言政策規劃等領域，著重於語言使用、身份認同及語言振興相關議題，分享其在學術研究中的重要見解。</p>
             </div>
           </div>
 
@@ -322,7 +322,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title"><a href="project-details.html" class="stretched-link">研究計畫</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Karen 參與的研究與專案，內容涵蓋語言政策、語言振興及社會語言學相關實務計劃，展示其在推動語言保護與多語文化發展中的實際貢獻與影響。</p>
             </div>
           </div>
 
@@ -330,23 +330,23 @@
             <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
               <h4 class="title"><a href="cooperation-details.html" class="stretched-link">產學合作</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
-            <div>
-              <h4 class="title"><a href="work-details.html" class="stretched-link">工作經歷</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <p class="description">Karen 的產學合作與專案經驗，涵蓋多項跨領域研究與合作計畫。內容強調其在語言研究、教育推廣及產業合作中的貢獻與參與，展現多元合作模式與成果。</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
+            <div>
+              <h4 class="title"><a href="work-details.html" class="stretched-link">工作經歷</a></h4>
+              <p class="description">Karen 的過往工作經歷，涵蓋參與計畫與教學課程等相關描述，展現其在教育與學術的豐富經歷、多元貢獻與專業背景。</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
             <div>
               <h4 class="title"><a href="licenses-certificates.html" class="stretched-link">專利/證照/證書</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">Karen 取得的專業證照與認證，包括新型專利、教師證書、語言能力與人工智慧相關的資格，彰顯其在語言教育與專業領域的深厚實力。</p>
             </div>
           </div>
 
