--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -143,6 +143,7 @@
               <ul>
                 <li><i class="bi bi-bookmark-star"></i> TKT 劍橋英語教師認證</li>
                 <li><i class="bi bi-bookmark-star"></i> AIL 人工智慧專業級證照</li>
+                <li><i class="bi bi-bookmark-star"></i> AIL 人工智慧基礎級證照</li>
                 <li><i class="bi bi-bookmark-star"></i> 新型研發專利【外語口說評分系統】</li>
                 <li><i class="bi bi-bookmark-star"></i> 高級中等學校英文科教師證書</li>
                 <li><i class="bi bi-bookmark-star"></i> 閩南語語言能力認證考試合格證書</li>
