--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
         <li><a href="#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
-        <li><a href="#guides"><i class="bi bi-images navicon"></i> Guides</a></li>
+        <li><a href="#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
         <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
@@ -306,7 +306,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-book"></i></div>
             <div>
               <h4 class="title"><a href="publication-details.html" class="stretched-link">學術發表</a></h4>
-              <p class="description">Karen 的學術發表與研究成果，涵蓋社會語言學與語言政策規劃等領域，著重於語言使用、身份認同及語言振興相關議題，分享其在學術研究中的重要見解。</p>
+              <p class="description">Karen 的學術發表涵蓋台灣新南向政策與東南亞語言人才培育、新住民子女語言現況與角色等主題。並在多場國際研討會上分享關於台灣原住民語言流失與復振、客家年輕世代語言活力與傳承等研究成果，為語言學與文化研究領域做出重要貢獻。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -318,11 +318,19 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+            <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
+            <div>
+              <h4 class="title"><a href="graduation-details.html" class="stretched-link">學生專題</a></h4>
+              <p class="description">Karen 帶領學生們的畢業專題論文列表，涵蓋台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title"><a href="project-details.html" class="stretched-link">研究計畫</a></h4>
-              <p class="description">Karen 參與的研究與專案，內容涵蓋語言政策、語言振興及社會語言學相關實務計劃，展示其在推動語言保護與多語文化發展中的實際貢獻與影響。</p>
+              <p class="description">Karen 主持並參與多項重要計畫，例如領導教育部「人文社會與產業實務創新鏈結計畫」、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -330,7 +338,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
               <h4 class="title"><a href="cooperation-details.html" class="stretched-link">產學合作</a></h4>
-              <p class="description">Karen 的產學合作與專案經驗，涵蓋多項跨領域研究與合作計畫。內容強調其在語言研究、教育推廣及產業合作中的貢獻與參與，展現多元合作模式與成果。</p>
+              <p class="description">Karen 積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -338,15 +346,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
             <div>
               <h4 class="title"><a href="work-details.html" class="stretched-link">工作經歷</a></h4>
-              <p class="description">Karen 的過往工作經歷，涵蓋參與計畫與教學課程等相關描述，展現其在教育與學術的豐富經歷、多元貢獻與專業背景。</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
-            <div>
-              <h4 class="title"><a href="licenses-certificates.html" class="stretched-link">專利/證照/證書</a></h4>
-              <p class="description">Karen 取得的專業證照與認證，包括新型專利、教師證書、語言能力與人工智慧相關的資格，彰顯其在語言教育與專業領域的深厚實力。</p>
+              <p class="description">Karen 曾於多所大學擔任教職與研究職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。其職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -356,12 +356,12 @@
 
     </section><!-- /Achievements Section -->
 
-    <!-- Guides Section -->
-    <section id="guides" class="portfolio section light-background">
+    <!-- Showcase Section -->
+    <section id="showcase" class="portfolio section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>指導 Guides</h2>
+        <h2>展示區 Showcase</h2>
         <p>(TBD) Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
@@ -375,7 +375,7 @@
             <li data-filter=".filter-branding">Branding</li>
             <li data-filter=".filter-books">Books</li>
             <li data-filter=".filter-guides-contest">競賽指導</li>
-            <li data-filter=".filter-guides-graduation">專題指導</li>
+            <li data-filter=".filter-licenses-certificates">認證/專利/證照</li>
             <li data-filter=".filter-dog">阿弟🐾</li>
           </ul>
 
@@ -393,14 +393,14 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-guides-graduation">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-licenses-certificates">
               <div class="portfolio-content h-100">
-                <img src="assets/img/guides/guide-cover-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/licenses/AIL-expert.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                    <h4>專題指導</h4>
-                    <p>《畢業專題論文指導》🎓📜</p>
-                  <a href="assets/img/guides/guide-zoom-2.jpg" title="畢業專題論文指導 🎓📜" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="graduation-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    <h4>認證/專利/證照</h4>
+                    <p>楊真宜老師 - 認證/專利/證照🏅📜</p>
+                  <a href="assets/img/licenses/AIL-expert.png" title="楊真宜老師 - 認證/專利/證照🏅📜" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="licenses-certificates.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -501,13 +501,13 @@
               </div>
             </div>
 
-          </div><!-- End Guides Container -->
+          </div><!-- End Showcase Container -->
 
         </div>
 
       </div>
 
-    </section><!-- /Guides Section -->
+    </section><!-- /Showcase Section -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
