--- a/publication-details.html
+++ b/publication-details.html
@@ -59,7 +59,7 @@
         <li><a href="/#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="/#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
         <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
-        <li><a href="/#guides"><i class="bi bi-images navicon"></i> Guides</a></li>
+        <li><a href="/#showcase"><i class="bi bi-images navicon"></i> Showcase</a></li>
         <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
         <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
