Add some content for TBDs

--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>經歷 Experiences</h2>
-        <p>(TBD)</p>
-        <ul>
-          <li><span><u>學術專長</u>：語言學、語意學、語用學、語言政策、田野調查、英語教學、社會語言學、應用語言學、地方創生與社會實踐（社區營造、跨領域整合與應用）</span></li>
-          <!-- <li><span><u>開設課程</u>：語言學概論、語意學、語用學、語音學、世界語言政策及語言流失、田野調查及問卷設計、英語及流行音樂、TED Talks、數位英語、台灣語言現況（前世與今生）、地方創生（理論與實務之應用）</span></li> -->
-        </ul>
+        <p>
+          Karen 兼具學術與實務經驗，學術專長包括《語言學》、《語意學》、《語用學》、《語言政策》、《田野調查》、《英語教學》、《社會語言學》、《應用語言學》、《地方創生與社會實踐》（社區營造、跨領域整合與應用）等。目前於大學擔任教職，亦曾赴美國夏威夷大學擔任訪問學者，積極參與跨文化語言研究與社會實踐計畫。此外，亦長期參與教育部與科技部的學術研究與產學合作計畫，推動英語教育、語言保留與科技應用的結合，致力於提升學術研究與社會應用的影響力。
+        </p>
+        <!-- <ul>
+          <li><span><u>開設課程</u>：語言學概論、語意學、語用學、語音學、世界語言政策及語言流失、田野調查及問卷設計、英語及流行音樂、TED Talks、數位英語、台灣語言現況（前世與今生）、地方創生（理論與實務之應用）</span></li>
+        </ul> -->
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -295,7 +296,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>成就 Achievements</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Karen 在學術研究、教育推廣與產學合作等領域取得豐碩成果。其學術發表涵蓋社會語言學、語言政策與規劃、語言習得與文化認同等主題，參與多項跨學科研究計畫。且積極投入產學合作與英語教育人才培育，促進學術研究與實務應用的結合。此外，Karen 指導學生進行畢業專題論文，協助他們在學術發展與實務經驗之間建立紮實的基礎，展現其在教學與研究上的多元貢獻。</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -314,7 +315,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-people"></i></div>
             <div>
               <h4 class="title"><a href="paticipation-details.html" class="stretched-link">學術參與</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <p class="description">(TBD) Karen 曾擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等。<code>[點選了解]</code></p>
             </div>
           </div>
 
