Add some content for TBDs (2)

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>展示區 Showcase</h2>
-        <p>(TBD) Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>此處展示 Karen 在專業領域與個人生活中的多元成果。從創新應用競賽獲獎、認證與專利、專業證照到生活點滴，每張照片與描述都記錄了其成果與累積。從這些分享，可以一窺 Karen 在學術與實務並進的旅程，以及對於教育與研究的熱情。</p>
       </div><!-- End Section Title -->
 
       <div class="container">
