--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>展示區 Showcase</h2>
-        <p>此處展示 Karen 在專業領域與個人生活中的多元成果。從創新應用競賽獲獎、認證與專利、專業證照到生活點滴，每張照片與描述都記錄了其成果與累積。從這些分享，可以一窺 Karen 在學術與實務並進的旅程，以及對於教育與研究的熱情。</p>
+        <p>Karen 在專業領域與個人生活中的多元成果。從創新應用競賽獲獎、專業證照與認證之取得、專利申請、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，可以一窺 Karen 在學術與實務並進的旅程、及對於教育與研究的熱情。</p>
       </div><!-- End Section Title -->
 
       <div class="container">
